# khmer-nlp-kcc

./: .gitignore  README.md  pyproject.toml
khmer_nlp/: __init__.py  _g2p.py  _inference.py  _labels.py  _loader.py  _models.py
